# promptbox

./: .gitignore  AGENTS.md  GEMINI.md  README.md  pyproject.toml
.github/documentation/: architecture.md  contributing.md  features.md  getting-started.md  index.md  pyproject.toml.md
.github/functions/: build_and_run.sh
.github/improvements/: clean-rebuild-run.sh  prompt.md  prompted-graph.txt  rebuild_commands.sh  run.sh
.streamlit/: config.toml
data/: promptbox.db
src/promptbox/: \  app.py  main.py
src/promptbox/core/: \  config.py
src/promptbox/db/: connection_manager.py  data_models.py  database.py  models.py
src/promptbox/models/: data_models.py  prompt.py
src/promptbox/services/: backup_service.py  character_service.py  chat_service.py  llm_service.py  prompt_service.py
src/promptbox/tui/: app.py  chat_ui.py  components.py  menus.py
src/promptbox/ui/: backup_view.py  character_view.py  chat_view.py  prompt_view.py  sessions_view.py
src/promptbox/utils/: archiver.py  file_handler.py  image_handler.py  prompt_parser.py
static/: style.css
